Agregando en la rama JAvaScript

--- a/Index.html
+++ b/Index.html
@@ -5,11 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=, initial-scale=1.0">
     <link rel="stylesheet" href="./CSS/Estilos.Css">
+    <script src="/JS/Saludar.js"></script>
     <title>Document</title>
 </head>
 <body>
     <h1>Bienvenido</h1>
     <h2>Hola esto es algo</h2>
     <h3>MEjroando GIt</h3>
+    <input type="button" onclick="saludar()" value="vamos que vamos!!!">
 </body>
 </html>
